--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,12 +6,50 @@
 trigger:
 - master
 
-pool:
-  vmImage: 'ubuntu-latest'
+
 
 variables:
   buildConfiguration: 'Release'
+stages:
+- stage: Build
+jobs:
+- job: "PipelineLearningsBuild"
 
+pool:
+  vmImage: 'vs2017-win2016'
 steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'build'
+    projects: 'pipelines-dotnet-core.csproj'
+    arguments: '--configuration $(BuildConfiguration)'
+    feedsToUse: 'select'
+    versioningScheme: 'off'
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'publish'
+    publishWebProjects: false
+    projects: 'pipelines-dotnet-core.csproj'
+    arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
+    feedsToUse: 'select'
+    versioningScheme: 'off'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
+
+- stage: "DevRelease"
+jobs:
+- job: "DevRelease"
+pool:
+vmImage: 'vs2017-win2016'
+steps:
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'Visual Studio Enterprise (5ae35b9e-9571-4a30-8426-62c1ba3394c4)'
+    appType: 'webApp'
+    WebAppName: 'PartsUnlimitedLD'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
