--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,13 @@ stages:
         modifyOutputPath: false
         feedsToUse: 'select'
         versioningScheme: 'off'
-
+    - task: ArchiveFiles@2
+      inputs:
+        rootFolderOrFile: '$(Build.BinariesDirectory)'
+        includeRootFolder: false
+        archiveType: 'zip'
+        archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+        replaceExistingArchive: true
     - task: PublishBuildArtifacts@1
       inputs:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
@@ -52,4 +58,4 @@ stages:
         azureSubscription: 'Visual Studio Enterprise (5ae35b9e-9571-4a30-8426-62c1ba3394c4)'
         appType: 'webApp'
         WebAppName: 'PartsUnlimitedLD'
-        packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+        packageForLinux: '$(build.artifactstagingdirectory)/**/*.zip'
