--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,13 +63,13 @@ stages:
         feedsToUse: 'internal'
         vstsFeed: 'multistageartifacts'
         vstsFeedPackage: 'netcoreweb'
-        vstsPackageVersion: '0.0.3'
+        vstsPackageVersion: '0.0.1'
         feedsToUsePublish: 'internal'
         versionOption: 'patch'
     - task: AzureRmWebAppDeployment@4
       inputs:
         ConnectionType: 'AzureRM'
-        azureSubscription: 'Visual Studio Enterprise (5ae35b9e-9571-4a30-8426-62c1ba3394c4)'
+        azureSubscription: 'Visual Studio Enterprise'
         appType: 'webApp'
-        WebAppName: 'PartsUnlimitedLD'
+        WebAppName: 'PartsUnlimited'
         packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
